# arcane_advisor_backend

./: .gitignore  alembic.ini  pyproject.toml  requirements.txt  setup.cfg
app/: config.py  database.py  main.py  models.py
app/config/: __init__.py  config.py  database.py
app/databases/: databases.py
app/models/: __init__.py  base_datatype.py  character_classes.py  consts.py  damege_type.py  source.py  spell_durations.py  spell_schools.py  spells.py  time_units.py
app/queries/: core.py  orm.py
app/sqlmodel_models/: character_subclasses.py  spell_casting_time.py  spell_character_class_link.py  spell_component_link.py  spell_components.py
models/: base_models.py  character_classes.py  character_subclasses.py  consts.py  spell_components.py  spell_levels.py  spell_schools.py  spells.py
server/: config.py  database.py  main.py
server/migrations/: env.py
server/models/: __init__.py  character_class_subclasses.py  character_classes.py  character_subclasses.py  charcter_class_subclasses.py  mixins.py  ref_spell_character_class.py  ref_spell_character_subclass.py  ref_spell_component.py  sources.py  spell_casting_time.py  spell_components.py  spell_durations.py  spell_levels.py  spell_schools.py  spells.py  type_damage.py  unit_durations.py
server/queries/: __init__.py  orm.py
server/routers/: character_classes.py  spells.py
server/schemas/: __init__.py  base_classes.py  character_classes.py  character_subclasses.py  sources.py  spell_components.py  spells.py  (+5 more)
sqlmodel_models/: __init__.py  base_models.py  character_class_subclasses.py  spell_levels.py
(+5 files in other folders)
