[tool.poetry]
name = "arcane-advisor"
version = "0.1.0"
description = ""
authors = ["VladimirGerman <vladimir.german.and@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.6"}
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
pydantic-settings = "^2.6.1"
psycopg = "^3.2.3"
alembic = "^1.14.0"
pydantic = {extras = ["email"], version = "^2.10.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
